k8s/config-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server
  namespace: takapedia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config-server
  template:
    metadata:
      labels:
        app: config-server
    spec:
      containers:
        - name: config-server
          image: harbor.local:7777/takapedia/config-server:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: config-server
  namespace: takapedia
spec:
  selector:
    app: config-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
